# cogman-gate

./: .gitattributes  .gitignore  CMakeLists.txt  COMMIT_AND_PUSH.md  CONTRIBUTING.md  CORE9_SPEC_COMPLIANCE.md  DISTRIBUTION_STRATEGY.md  FIX_SECRET_IN_HISTORY.md  GATE_POLICY_README.md  GIT_READY.md  GIT_REMOTE_SETUP.md  INSTALL.md  KERNEL_REPO_MIGRATION.md  LICENSE  README.md  README_DEV.md  REPOSITORY_INFO.md  STRATEGIC_DECISION.md  TODO.md  TODO_SHORT.md  USAGE.md  VERIFY_REMOTE.md  WHY_NOT_PYPI.md  install.sh  requirements.txt
action/: __init__.py  action_module.py  agent_controller.py  motor_output.py  text_output.py
bridge/: README.md  __init__.py  data_marshalling.py  error_map.py  example_usage.py  kernel_bridge.py  test_basic.py
cog_cli/: README.md  __init__.py  main.py  safety.py
config/: gate_policy_loader.py  gate_profiles.yaml  memory_policy.yaml  system.yaml
docs/: BASE-1_CANONICAL_DEFINITIONS.md  BASE-2_DATA_CONTRACTS.md  BASE-3_FORMULA_REGISTRY.md  BASE-4_LAYER_RESPONSIBILITY_LOCK.md  BASE-5_EVENT_TRACE_SYSTEM.md  BASE-6_LEGAL_MEANING_LOCK.md  CLI_EXECUTION_SPEC.md  COGMAN_CORE_KERNEL.md  CORE_FORMULA_REGISTRY.md  ENERGY_VARIABLE_SPEC.md  GATECORE_SPEC.md  GIT_IP_PROTECTION.md  GIT_SETUP.md  GIT_WORKFLOW.md  INVARIANT_RULES.md  KERNEL_BOUNDARY_SPEC.md  KERNEL_INVOCATION_SPEC.md  KERNEL_PE_INTERFACE.md  LLM_INTERFACE_SPEC.md  LLM_TESTING_GUIDE.md  MEMORY_FIELD_SPEC.md  PERCEPTION_BOUNDARY_SPEC.md  PERCEPTUAL_ENERGY_AUDIT_CHECKLIST.md  PERCEPTUAL_ENERGY_MAPPING_SPEC.md  PUBLIC_REPO_STRATEGY.md  PerceptualEnergyContract.json  README.md  REASONING_MODULE_SPEC.md  RUNTIME_CONTRACT_SPEC.md  RUNTIME_LOOP_SPEC.md  TRACE_LIFECYCLE_SPEC.md  WM_CONTROLLER_SPEC.md
gate/: __init__.py  decision_gate.py  gate_policy.py  gate_trace.py  gatecore.py
kernel/: .gitignore  BUILD.md  GATE_POLICY_INTEGRATION.md  README.md
llm/: __init__.py  annotation.py  prompt_templates.py  response_formatter.py
memory/: __init__.py  consolidation.py  episodic_field.py  identity_field.py  memory_query.py  procedural_field.py  semantic_field.py
perception/: README.md  __init__.py  decoder.py  energy_estimator.py  (+4 more)
(+111 files in other folders)
